--- a/index.html
+++ b/index.html
@@ -10,6 +10,45 @@
 </head>
 <body>
 
+    <!-- start header -->
+    <header></header>
+    <!-- /header -->
+
+    <!-- start jumbo -->
+    <section id="jumbotron"></section>
+    <!-- /jumbo -->
+
+    <!-- start main -->
+    <main>
+
+        <!-- start portfolio -->
+        <section id="portfolio"></section>
+        <!-- /portfolio -->
+
+        <!-- start about -->
+        <section id="about"></section>
+        <!-- /about -->
+
+        <!-- start contact-->
+        <section id="contact"></section>
+        <!-- /contact -->
+
+    </main>
+    <!-- /main -->
+
+    <!-- start footer -->
+    <footer>
+
+        <!-- start footer-top -->
+        <div class="footer-top"></div>
+        <!-- /footer-top -->
+
+        <!-- start footer-bottom -->
+        <div class="footer-bottom"></div>
+        <!-- / footer-bottom -->
+    </footer>
+    <!-- /footer -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
