--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="debug">
 
     <!-- start header -->
-    <header></header>
+    <header>
+        <div class="container">
+            <div class="box"></div>
+        </div>  
+    </header>
     <!-- /header -->
 
     <!-- start jumbo -->
-    <section id="jumbotron"></section>
+    <section id="jumbotron">
+        <div class="container py-5">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h1>Lorem ipsum dolor</h1>
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- /jumbo -->
 
     <!-- start main -->
