--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             </div>
         </div>
     </section>
+
+    <!-- alternativa al jumbo di prima -->
+    <!-- <section id="jumbotron">
+        <div class="container-fluid py-5 text-center">
+            <h1>Lorem ipsum dolor</h1>
+            <p>Lorem ipsum dolor sit amet</p>
+        </div>
+    </section> -->
+    <!-- / alternativa jumbo di prima -->
     <!-- /jumbo -->
 
     <!-- start main -->
