portfolio - primo metodo per le col

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- start jumbo -->
     <section id="jumbotron">
-        <div class="container py-5">
+        <div class="container py-5 text-white text-uppercase">
             <div class="row text-center">
                 <div class="col-12">
                     <h1>Lorem ipsum dolor</h1>
@@ -44,7 +44,43 @@
     <main>
 
         <!-- start portfolio -->
-        <section id="portfolio"></section>
+        <section id="portfolio">
+            <div class="container py-5">
+                <div class="row text-center text-uppercase">
+                    <div class="col-12">
+                        <h2>Lorem ipsum dolor</h2>
+                    </div>
+                </div>
+
+                <!-- primo metodo per creare i 6 box -->
+                <div class="row g-3">
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="box"></div>
+                    </div>
+                </div>
+                <!-- / primo metodo -->
+            </div>
+        </section>
         <!-- /portfolio -->
 
         <!-- start about -->
