portfolio - secondo metodo per le col

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
 
                 <!-- primo metodo per creare i 6 box -->
-                <div class="row g-3">
+                <!-- <div class="row g-3">
                     <div class="col-12 col-sm-6 col-lg-4">
                         <div class="box"></div>
                     </div>
@@ -77,8 +77,37 @@
                     <div class="col-12 col-sm-6 col-lg-4">
                         <div class="box"></div>
                     </div>
-                </div>
+                </div> -->
                 <!-- / primo metodo -->
+
+                <!-- secondo metodo per le col -->
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3">
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box"></div>
+                    </div>
+
+                </div>
+                <!-- / secondo metodo -->
             </div>
         </section>
         <!-- /portfolio -->
