--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- start header -->
     <header>
-        <div class="container">
+        <div class="container-lg">
             <div class="box"></div>
         </div>  
     </header>
@@ -113,11 +113,54 @@
         <!-- /portfolio -->
 
         <!-- start about -->
-        <section id="about"></section>
+        <section id="about">
+
+            <!-- inizio container -->
+            <div class="container">
+                <div class="row text-center text-white text-uppercase">
+                    <div class="col-12">
+                        <h2>About</h2>
+                    </div>
+                </div>
+
+                <div class="row gy-3">
+                    <div class="offset-1 col-10 col-sm-5">
+                        <div class="box"></div>
+                    </div>
+                    <div class="offset-1 col-10 offset-sm-0 col-sm-5">
+                        <div class="box"></div>
+                    </div>
+                </div>
+
+                <div class="row text-center p-3">
+                    <div class="col-12">
+                        <h3>Lorem</h3>
+                    </div>
+                </div>
+            </div>
+            <!-- /end container            -->
+
+        </section>
         <!-- /about -->
 
         <!-- start contact-->
-        <section id="contact"></section>
+        <section id="contact">
+
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-12">
+                        <h2>Contatti</h2>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="offset-1 col-10">
+                        <div class="box"></div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
         <!-- /contact -->
 
     </main>
@@ -127,11 +170,33 @@
     <footer>
 
         <!-- start footer-top -->
-        <div class="footer-top"></div>
+        <div class="ms_footer-top pt-5">
+            <div class="container">
+                <div class="row gy-2 gy-sm-0">
+                    <div class="col-12 col-sm-4">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-12 col-sm-4">
+                        <div class="box"></div>
+                    </div>
+                    <div class="col-12 col-sm-4">
+                        <div class="box"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- /footer-top -->
 
         <!-- start footer-bottom -->
-        <div class="footer-bottom"></div>
+        <div class="ms_footer-bottom">
+            <div class="container">
+                <div class="row text-center text-white pt-5">
+                    <div class="col-12">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- / footer-bottom -->
     </footer>
     <!-- /footer -->
