--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <!-- /about -->
 
         <!-- start contact-->
-        <section id="contact">
+        <section id="contact" class="my-4">
 
             <div class="container">
                 <div class="row text-center">
@@ -170,7 +170,7 @@
     <footer>
 
         <!-- start footer-top -->
-        <div class="ms_footer-top pt-5">
+        <div class="ms_footer-top py-5">
             <div class="container">
                 <div class="row gy-2 gy-sm-0">
                     <div class="col-12 col-sm-4">
