--- a/index.html
+++ b/index.html
@@ -12,9 +12,27 @@
 
     <!-- start header -->
     <header>
-        <div class="container-lg">
-            <div class="box"></div>
-        </div>  
+        <nav class="navbar navbar-expand-lg navbar-dark ms_bg-navbar text-uppercase">
+            <div class="container">
+              <a class="navbar-brand" href="#">Start Bootstrap</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav> 
     </header>
     <!-- /header -->
 
